--- a/mods/dreambuilder_hotbar/mod.conf
+++ b/mods/dreambuilder_hotbar/mod.conf
@@ -1,2 +1,4 @@
+name = dreambuilder_hotbar
+description = Expands the hotbar to up to 32 slots
 min_minetest_version = 5.4.0
 optional_depends = default, dreambuilder_theme_settings
