--- a/mods/mail_mod/mod.conf
+++ b/mods/mail_mod/mod.conf
@@ -1,3 +1,4 @@
 name = mail
 description = mail mod
-optional_depends = unified_inventory,default,xban2,qos
+depends = ch_core,unified_inventory
+optional_depends = default,xban2
