--- a/mods/minenews/mod.conf
+++ b/mods/minenews/mod.conf
@@ -1,4 +1,4 @@
 name = minenews
 title = Localized Server News
 description = Display localized server news when a player joins
-depends = markdown2formspec
+depends = ch_core, markdown2formspec
