--- a/mods/real_torch/mod.conf
+++ b/mods/real_torch/mod.conf
@@ -1,4 +1,4 @@
 name = real_torch
-depends = default
+depends = default, technic
 optional_depends = tnt
 description = Have torches go out after a while and drop when in water.
