--- a/mods/round_trunks/mod.conf
+++ b/mods/round_trunks/mod.conf
@@ -1,3 +1,4 @@
 name = round_trunks
 description = Turns cubic tree trunks to cylindrical.
 depends = default
+optional_depends = moretrees, ebony, cherrytree, chestnuttree, plumtree, willow
