--- a/mods/travelnet/mod.conf
+++ b/mods/travelnet/mod.conf
@@ -1,3 +1,4 @@
 name = travelnet
+depends = ch_core
 optional_depends = mesecons, dye
 description = Network of teleporter-boxes that allows easy travelling to other boxes on the same network.
