--- a/mods/letters/mod.conf
+++ b/mods/letters/mod.conf
@@ -1,3 +1,3 @@
 name = letters
-depends = default
-optional_depends = darkage, colouredstonebricks
+depends = default, bakedclay, unifieddyes
+description = Adds a letter cutting tool with letter "signlike" nodes.
