--- a/mods/minetest_orienteering/mod.conf
+++ b/mods/minetest_orienteering/mod.conf
@@ -1,3 +1,4 @@
 name = orienteering
 description = A collection of tools to help you orient yourselves in the world, such as compass, altimeter, etc.
+depends = ch_core
 optional_depends = default, dye, map, awards
