--- a/mods/technic/technic/mod.conf
+++ b/mods/technic/technic/mod.conf
@@ -1,3 +1,3 @@
 name = technic
-depends = default, pipeworks, technic_worldgen, basic_materials
+depends = basic_materials, ch_core, default, pipeworks, technic_worldgen
 optional_depends = bucket, screwdriver, mesecons, mesecons_mvps, digilines, digiline_remote, intllib, unified_inventory, vector_extras, dye, craftguide,i3
