--- a/mods/replacer/mod.conf
+++ b/mods/replacer/mod.conf
@@ -1,4 +1,5 @@
 name = replacer
+depends = ch_core, technic
 description = Essential tool for builders. Allows to store material and rotation and place more blocks the same way without having to turn them all individually with the screwdriver.
 optional_depends = default, dye, moreblocks, stairs, stairsplus
 author = Sokomine
