[basic_signs] Cedule „ve výstavbě“ nově ukazuje jméno postavy, která ji postavila
- [signs_lib] široký font zvolen jako výchozí
- [signs_lib] zamčené cedule nově ukazují jméno postavy s diakritikou

--- a/mods/basic_signs/mod.conf
+++ b/mods/basic_signs/mod.conf
@@ -1,4 +1,4 @@
 min_minetest_version = 5.2.0
 name = basic_signs
-depends = default, screwdriver, signs_lib, basic_materials
+depends = ch_core, default, screwdriver, signs_lib, basic_materials
 description = ...
