--- a/mods/signs_lib/mod.conf
+++ b/mods/signs_lib/mod.conf
@@ -1,5 +1,6 @@
 name = signs_lib
 author = VanessaE
+depends = ch_core
 optional_depends = intllib, screwdriver, streetspoles, streetlamps, cottages, prefab_redo, default, cherrytree, mobs, moretrees, morelights
 description = Adds signs with readable text.
 min_minetest_version = 5.4.0
