--- a/mods/anvil/mod.conf
+++ b/mods/anvil/mod.conf
@@ -1,4 +1,4 @@
 name = anvil
-depends = default
+depends = ch_core, basic_materials, default
 optional_depends = doc,technic
 description = Hammer and anvil for repairing tools.
