--- a/mods/ch_core/mod.conf
+++ b/mods/ch_core/mod.conf
@@ -1,3 +1,3 @@
 name = ch_core
 description = Vlastní úpravy serveru Český hvozd
-depends = default, dye, wool, moreblocks, unified_inventory
+depends = basic_materials, default, dye, wool, moreblocks, unified_inventory
