--- a/mods/currency/mod.conf
+++ b/mods/currency/mod.conf
@@ -1,4 +1,5 @@
 name = currency
-optional_depends = default, loot, pipeworks
-description = Provides shops, barter tables, safes, and multiple denominations of currency, called "Minegeld".
+depends = ch_core, default, kcs
+optional_depends = pipeworks
+description = Provides shops, barter tables, safes, and multiple denominations of currency.
 min_minetest_version = 5.2.0
