--- a/mods/ch_core/mod.conf
+++ b/mods/ch_core/mod.conf
@@ -1,3 +1,4 @@
 name = ch_core
 description = Vlastní úpravy serveru Český hvozd
 depends = basic_materials, default, dye, wool, moreblocks, unified_inventory
+optional_depends = emote
