[giftbox2] úpravy a navázání na technic_chests

--- a/mods/minetest_giftbox2/mod.conf
+++ b/mods/minetest_giftbox2/mod.conf
@@ -1,4 +1,3 @@
 name = giftbox2
 description = Gift boxes that players can give to other who will then receive random items
-depends = formspecs
-optional_depends = default
+depends = default, technic_chests
