přepracování systému kbelíků a zalévání
- [bucket] zcela nové API, podpora umístitelných kbelíků
- [bucket_wooden] registrace věder pomocí nového API
- [ch_falling_farming] odebráno zalévání (nyní se řeší v módech bucket a farming)
- [clothing] řešení vztahu mezi vědry a barvicím strojem
- [farming] nový způsob fungování zalévání a ornice (vysychání ornice
navázáno na růst rostlin, ABM zrušen)
- [mobs_animal] registrace kbelíku a vědra s mlékem prostřednictvím
nového API
- [pipeworks] vodou naplněné potrubí nově slouží k automatickému
zalévání
- [technic] nová implementace zalévání kanystry s vodou

--- a/mods/bucket_wooden/mod.conf
+++ b/mods/bucket_wooden/mod.conf
@@ -1,4 +1,4 @@
 name = bucket_wooden
 description = Wooden Bucket
-depends = default
+depends = bucket, default
 optional_depends = ethereal,farming
