--- a/mods/ch_modpack/ch_falling_farming/mod.conf
+++ b/mods/ch_modpack/ch_falling_farming/mod.conf
@@ -1,4 +1,4 @@
 name = ch_falling_farming
 description = Makes changes in farming to allow falling dirt and soil
-depends = bucket, default, farming
-optional_depends = bucket_wooden, technic
+depends = default, farming
+optional_depends = building_blocks, charcoal, darkage, molehills
