--- a/mods/mobs_animal/mod.conf
+++ b/mods/mobs_animal/mod.conf
@@ -1,4 +1,4 @@
 name = mobs_animal
-depends = mobs
+depends = bucket, mobs
 optional_depends = default, lucky_block, intllib
 description = Adds farm animals.
