--- a/mods/stamina/mod.conf
+++ b/mods/stamina/mod.conf
@@ -1,3 +1,3 @@
 name = stamina
 description = This mod adds a stamina, or hunger mechanic to Minetest. Actions like crafting, walking, digging or fighting make the player exhausted.
-depends =
+depends = hudbars
