[bushy_leaves] pokus o úsporný model pro často používané typy listů a jehličí

--- a/mods/bushy_leaves/mod.conf
+++ b/mods/bushy_leaves/mod.conf
@@ -1,4 +1,4 @@
 description = Makes leaves render bushy instead of boxy.
 name = bushy_leaves
-optional_depends = default, mcl_core, nc_tree, rp_default, moretrees
+optional_depends = default, mcl_core, nc_tree, rp_default, baldcypress, bamboo, birch, cacaotree, clementinetree, ebony, hollytree, cherrytree, chestnuttree, jacaranda, larch, lemontree, mahogany, maple, oak, palm, plumtree, pomegranate, sequoia, willow, moretrees
 title = Bushy Leaves
