[ch_overrides] nové textury a trocha přepracování

--- a/mods/ch_modpack/ch_overrides/mod.conf
+++ b/mods/ch_modpack/ch_overrides/mod.conf
@@ -1,4 +1,4 @@
 name = ch_overrides
 description = Vlastní úpravy serveru Český hvozd zlepšující vztahy mezi módy
-depends = ch_core, default, technic, technic_chests, technic_cnc, technic_worldgen
-optional_depends = homedecor_kitchen
+depends = ch_core, default
+optional_depends = homedecor_kitchen, technic, technic_chests, technic_cnc, technic_worldgen
