[technic_cnc] podpora pro obrábění svítícího skla
- [ch_test] rychlá oprava
- [unified_inventory] také oprava

--- a/mods/technic/technic_cnc/mod.conf
+++ b/mods/technic/technic_cnc/mod.conf
@@ -1,3 +1,3 @@
 name = technic_cnc
 depends = default, basic_materials
-optional_depends = technic, unified_inventory
+optional_depends = farming, technic, unified_inventory
