[stamina] přechod na odnož od TenPlus1
- [mobs_redo] doplnění lokalizace

--- a/mods/stamina/mod.conf
+++ b/mods/stamina/mod.conf
@@ -1,3 +1,4 @@
 name = stamina
-description = This mod adds a stamina, or hunger mechanic to Minetest. Actions like crafting, walking, digging or fighting make the player exhausted.
-depends = hudbars
+depends = default, hudbars
+optional_depends = 3d_armor, player_monoids, pova
+description = Adds stamina, hunger and drunk effects.
