--- a/mods_původní/stamina/mod.conf
+++ b/mods_původní/stamina/mod.conf
@@ -1,1 +1,4 @@
 name = stamina
+depends = default
+optional_depends = 3d_armor, player_monoids, pova, lucky_block
+description = Adds stamina, hunger and drunk effects.
