--- a/mods/wateringcan/mod.conf
+++ b/mods/wateringcan/mod.conf
@@ -1,3 +1,4 @@
 name = wateringcan
 description = A watering can to wetten soil.
-optional_depends = default, bucket, farming, pedology, doc, doc_items, hades_core, hades_bucket
+depends = farming
+optional_depends = default, bucket, pedology, doc, doc_items, hades_core, hades_bucket
