--- a/mods/unified_inventory/mod.conf
+++ b/mods/unified_inventory/mod.conf
@@ -1,4 +1,5 @@
 name = unified_inventory
+depends = ch_core
 optional_depends = default, creative, sfinv, datastorage, farming
 description = """
 Unified Inventory replaces the default survival and creative inventory.
