--- a/mods/ch_modpack/ch_overrides/mod.conf
+++ b/mods/ch_modpack/ch_overrides/mod.conf
@@ -1,4 +1,4 @@
 name = ch_overrides
 description = Vlastní úpravy serveru Český hvozd zlepšující vztahy mezi módy
 depends = ch_core, default
-optional_depends = basic_materials, bones, bucket, butterfiles, carts, doors, drinks, fireflies, flowers, homedecor_kitchen, letters, map, moreblocks, moreores, pipeworks, screwdriver, technic, technic_chests, technic_cnc, technic_worldgen, tnt, travelnet, vessels, xpanes
+optional_depends = basic_materials, bones, bucket, building_blocks, butterfiles, carts, charcoal, darkage, doors, drinks, farming, fireflies, flowers, homedecor_kitchen, letters, map, molehills, moreblocks, moreores, pipeworks, screwdriver, technic, technic_chests, technic_cnc, technic_worldgen, tnt, travelnet, vessels, xpanes
