[clothing] aktualizace módu ze zdroje

--- a/mods_původní/clothing/mod.conf
+++ b/mods_původní/clothing/mod.conf
@@ -1,4 +1,5 @@
 name = clothing
 tittle = Clothing mod
 description = Add clothing to Minetest game. This mod is based on clothing mod from stujones11, bell07, SmallJoker and aerozoic. For available machines and clothes, use this with appliances mod. It is recomended to use this mod with skinsdb mod which makes clothing visible. 
-optional_depends = appliances, multiskin, sfinv, creative, inventory_plus, unified_inventory, wool, bucket, default, farming, bonemeal, skeletons, basic_materials
+depends = default
+optional_depends = appliances, multiskin, sfinv, creative, inventory_plus, unified_inventory, wool, bucket, farming, bonemeal, skeletons, basic_materials
