--- a/mods/ch_modpack/ch_core/mod.conf
+++ b/mods/ch_modpack/ch_core/mod.conf
@@ -1,4 +1,4 @@
 name = ch_core
 description = Vlastní úpravy serveru Český hvozd
 depends = basic_materials, default, doors, dye, player_api, sethome, wool
-optional_depends = emote, hudbars
+optional_depends = emote, hudbars, wielded_light
