--- a/mods/headlamp/mod.conf
+++ b/mods/headlamp/mod.conf
@@ -1,5 +1,4 @@
 name = headlamp
 description = Adds a headlamp that can be worn as armor, providing a bright light source
-depends = illumination, 3d_armor
-optional_depends = default, farming, technic
-min_minetest_version  = 5.3.0
+depends = ch_core, clothing, default, farming, technic, wielded_light
+min_minetest_version  = 5.5.0
