--- a/mods/drinks/mod.conf
+++ b/mods/drinks/mod.conf
@@ -2,5 +2,5 @@ name = drinks
 depends= bucket,default,vessels,moreblocks
 description = Adds a juice press and two juice storage containers. Most fruits and several veggies can be juiced. The resulting drinks can be 'ate' to gain health, or if you are using the thirsty mod, to regain hydration.
 author = Nathan, Napiophelios
-optional_depends = farming,moretrees,plumtree,ethereal
+optional_depends = farming,moretrees,plumtree,ethereal,wine
 title = Drinks
