[comboblock] oprava kompatibility s jinými módy
- [technic] oprava nového přepínání režimů u vrtáků

--- a/mods/redef/mod.conf
+++ b/mods/redef/mod.conf
@@ -1,5 +1,6 @@
 name = redef
 depends = default
+optional_depends = comboblock
 description = """
 Changes smaller things that are issues for either Minetest or Minetest Game that are technically fixable but won’t be fixed due to several non-technical reasons.
 
