[ch_extras] implementováno skákadlo a teleportér
- [ch_core] lepší ikony a řazení pro administrátorská světla

--- a/mods/ch_modpack/ch_extras/mod.conf
+++ b/mods/ch_modpack/ch_extras/mod.conf
@@ -1,4 +1,4 @@
 name = ch_extras
 description = Další bloky, nástroje apod. pro Český hvozd
 depends = ch_core, default
-optional_depends = moreblocks
+optional_depends = moreblocks, mobs, homedecor_gastronomy
