--- a/mods/compactor/mod.conf
+++ b/mods/compactor/mod.conf
@@ -1,6 +1,6 @@
 name=compactor
 title=Compactor
 description=A Technic based machine for converting certain items into more compact forms
-depends=technic
-optional_depends=df_farming,ethereal,farming,moreores
+depends=default,technic
+optional_depends=charcoal,farming,moreblocks,moreores
 author=alerikaisattera
