[kcs] mód odstraněn, mince zaintegrovány do ch_core
- [ch_core] mince
- [smartshop] obchodní terminál rozeznává i nové mince

--- a/mods/currency/mod.conf
+++ b/mods/currency/mod.conf
@@ -1,5 +1,5 @@
 name = currency
-depends = ch_core, default, kcs
+depends = ch_core, default
 optional_depends = pipeworks
 description = Provides shops, barter tables, safes, and multiple denominations of currency.
 min_minetest_version = 5.2.0
