--- a/mods/ch_modpack/ch_extras/mod.conf
+++ b/mods/ch_modpack/ch_extras/mod.conf
@@ -1,4 +1,4 @@
 name = ch_extras
 description = Další bloky, nástroje apod. pro Český hvozd
-depends = ch_core, default
-optional_depends = moreblocks, mobs, homedecor_gastronomy
+depends = ch_core, default, moreblocks
+optional_depends = anvil, mobs, homedecor_gastronomy
