--- a/mods/towercrane/mod.conf
+++ b/mods/towercrane/mod.conf
@@ -1,3 +1,3 @@
 name = towercrane
-depends = default
+depends = ch_core, default
 description = A crane for easier construction of buildings. The crane forms a working area in which the player gets fly privs.
