--- a/mods/technic/technic_chests/mod.conf
+++ b/mods/technic/technic_chests/mod.conf
@@ -1,3 +1,3 @@
 name = technic_chests
-depends = default, basic_materials, ch_core
+depends = ch_core, default, basic_materials
 optional_depends = technic, technic_worldgen, moreores, pipeworks, protector, digilines
