[ch_core] implementováno oceňování činností chat a craft
- [appliances] napojení na nově oceňované činnosti
- [unified_inventory] vyprázdnění výrobní mřížky se ocení jako výroba

--- a/mods/appliances/mod.conf
+++ b/mods/appliances/mod.conf
@@ -1,3 +1,4 @@
 name=appliances
 description=API for easier creating of appliances powered by hand, mesecon, technic/elepower/techage/factory electic network.
+depends = ch_core
 optional_depends=mesecons,hades_mesecons,pipeworks,technic,hades_technic,unified_inventory,craftguide,hades_craftguide2,tt,elepower_papi,techage,factory
