[streets] lokalizace a adaptace

--- a/mods/streets/mod.conf
+++ b/mods/streets/mod.conf
@@ -1,6 +1,6 @@
 name = streets
 title = Streets
-depends = default, stairs, ts_workshop, dye
+depends = building_blocks, default, stairs, dye
 optional_depends = creative, xpanes, stairsplus, moreblocks, digilines, concrete
 license = MIT
 version = 2.0.1
