[mesecons_detector] oprava chyby způsobující pád serveru

--- a/mods/mesecons/mesecons_detector/mod.conf
+++ b/mods/mesecons/mesecons_detector/mod.conf
@@ -1,2 +1,2 @@
 name = mesecons_detector
-depends = mesecons, mesecons_gamecompat, mesecons_materials
+depends = ch_core, mesecons, mesecons_gamecompat, mesecons_materials
