[streets] přidána podpora kreslení značek na svahy
- [moreblocks] přidány trojité svahy
- [streets] přidána možnost vyrobit značkovače
- [streets] přidáno přepínání značek značkovačů (Aux1+pravý klik)

--- a/mods/streets/mod.conf
+++ b/mods/streets/mod.conf
@@ -1,6 +1,6 @@
 name = streets
 title = Streets
-depends = building_blocks, default, stairs, dye
+depends = building_blocks, ch_core, default, stairs, dye
 optional_depends = creative, xpanes, stairsplus, moreblocks, digilines, concrete
 license = MIT
 version = 2.0.1
