--- a/mods/advtrains/advtrains/mod.conf
+++ b/mods/advtrains/advtrains/mod.conf
@@ -4,4 +4,4 @@ description=Core system for realistic trains in Minetest
 author=orwell96
 
 depends=serialize_lib
-optional_depends=mesecons,mesecons_switch,digtron
+optional_depends=mesecons,mesecons_switch,digtron,moretrees,ebony,cherrytree,chestnuttree,plumtree,willow,darkage,basic_materials,building_blocks,technic_worldgen
