[vessels, wine, home_workshop_misc] změna zvuků sklenic a lahví
- [drinks] vodu lze nyní do sudu nalít i ve formě zdroje vody
- [drinks] přidána podpora sójového mléka, mátového čaje a mléka, zatím bez kontroly receptů
- [unified_inventory] tlačítka vykouzlení nyní respektují nastavenou vlastnost stack_max

--- a/mods/drinks/mod.conf
+++ b/mods/drinks/mod.conf
@@ -2,5 +2,5 @@ name = drinks
 depends= bucket,default,vessels,moreblocks,wine
 description = Adds a juice press and two juice storage containers. Most fruits and several veggies can be juiced. The resulting drinks can be 'ate' to gain health, or if you are using the thirsty mod, to regain hydration.
 author = Nathan, Napiophelios
-optional_depends = farming,moretrees,plumtree,ethereal,bucket_wooden
+optional_depends = farming,moretrees,plumtree,ethereal,bucket_wooden,mobs_animal
 title = Drinks
