--- a/mods/homedecor_modpack/itemframes/mod.conf
+++ b/mods/homedecor_modpack/itemframes/mod.conf
@@ -1,3 +1,3 @@
 name = itemframes
-depends = dye, homedecor_common, mesecons_materials
+depends = ch_core, dye, homedecor_common, mesecons_materials
 optional_depends = mesecons_mvps, screwdriver, default
