--- a/mods/technic/technic_cnc/mod.conf
+++ b/mods/technic/technic_cnc/mod.conf
@@ -1,3 +1,3 @@
 name = technic_cnc
 depends = default, basic_materials
-optional_depends = ch_core, farming, technic
+optional_depends = ch_core, darkage, farming, technic
