lepší logování mazaných receptů
- [drinks] kovové láhve a kbelíky nápojů již nově nejsou umístitelné bloky

--- a/mods/clothing/mod.conf
+++ b/mods/clothing/mod.conf
@@ -1,5 +1,5 @@
 name = clothing
 title = Clothing mod
 description = Add clothing to Minetest game. This mod is based on clothing mod from stujones11, bell07, SmallJoker and aerozoic. For available machines and clothes, use this with appliances mod. It is recomended to use this mod with skinsdb mod which makes clothing visible. 
-depends = bucket, default, unifieddyes
+depends = bucket, ch_core, default, unifieddyes
 optional_depends = appliances, multiskin, sfinv, creative, inventory_plus, unified_inventory, wool, bucket_wooden, farming, bonemeal, skeletons, basic_materials
