--- a/mods/ropes/mod.conf
+++ b/mods/ropes/mod.conf
@@ -1,4 +1,4 @@
 name = ropes
 description = Adds rope boxes and ladders
-depends = default
+depends = ch_core, default
 optional_depends = cottages, doc, farming, hemp, loot, vines
