--- a/mods/ts_furniture/mod.conf
+++ b/mods/ts_furniture/mod.conf
@@ -1,4 +1,4 @@
 name = ts_furniture
-depends = default
+depends = ch_core, default
 optional_depends = bakedclay, moretrees, ethereal
 description = Adds basic furniture (Chairs, Tables, Small Tables, Tiny Tables, Benches).
