[summer] adaptace a lokalizace módu
- [ch_extras] přidán světlý štěrk

--- a/mods/summer_22_08_15/mod.conf
+++ b/mods/summer_22_08_15/mod.conf
@@ -1,6 +1,6 @@
 description = Summer stuff
-author = Ulla
-title = Summer
+author = Singularis (this fork, original author: Ulla)
+title = Summer (Cesky hvozd)
 name = summer
-depends =default,stairs
-optional_depends= 3d_armor,cannabis
+depends = doors,default
+optional_depends= 3d_armor,moreblocks
