--- a/mods/tombs/mod.conf
+++ b/mods/tombs/mod.conf
@@ -1,5 +1,5 @@
 name = tombs
 description = Adds many shapes and styles of tombstones.
-depends = default
-optional_depends = bakedclay, bones, caverealms, darkage, ethereal, geominer, maple, moreores, moretrees, mychisel, wool
+depends = ch_core, default, display_api, font_api
+optional_depends = bakedclay,basic_materials,bones,darkage,jonez,moreblocks,technic_worldgen
 author = Nathan Salapat
