[ch_overrides, summer] umožněno sezení na lehátkách z módu summer
- [emote, summer] umožněno ležení na osuškách
- [summer] postava se již při ležení na matraci nevznáší

--- a/mods/summer_22_08_15/mod.conf
+++ b/mods/summer_22_08_15/mod.conf
@@ -3,4 +3,4 @@ author = Singularis (this fork, original author: Ulla)
 title = Summer (Cesky hvozd)
 name = summer
 depends = doors,default
-optional_depends= 3d_armor,moreblocks
+optional_depends= 3d_armor,emote,moreblocks
