[bike,ch_core] implementováno zamykání kol zámky
- [ch_extras, ch_test, ts_furniture] drobné úpravy

--- a/mods/bike/mod.conf
+++ b/mods/bike/mod.conf
@@ -1,4 +1,4 @@
 name = bike
 description = Bike mod for Minetest
-depends = ch_core
+depends = basic_materials, ch_core
 optional_depends = skinsdb, skins, u_skins, simple_skins, wardrobe
