--- a/mods/metrosigns/mod.conf
+++ b/mods/metrosigns/mod.conf
@@ -1,4 +1,4 @@
 name = metrosigns
 descriptions = Extensive library of signs for train/metro systems
 depends = ch_core, letters, unifieddyes
-optional_depends = advtrains_subwayblocks, basic_materials, default, signs_api, trainblocks
+optional_depends = advtrains_subwayblocks, anvil, basic_materials, default, signs_api, trainblocks
