--- a/mods/elevator/mod.conf
+++ b/mods/elevator/mod.conf
@@ -1,4 +1,5 @@
 name = elevator
 description = An entity-based elevator allowing fast realtime travel in Minetest. Supports Minetest Game, MineClone2, and Aurum
+depends = ch_core
 optional_depends = default, technic, homedecor, chains, farming, mcl_core, mcl_sounds, aurum, screwdriver, doc_items
 min_minetest_version = 5.4
