[technic] výroba ethanolu v extraktoru + další
- [ch_extras] výroba vody z ledu či sněhu v peci

--- a/mods/technic/technic/mod.conf
+++ b/mods/technic/technic/mod.conf
@@ -1,3 +1,3 @@
 name = technic
-depends = basic_materials, bucket, ch_core, default, pipeworks, technic_worldgen
+depends = basic_materials, bucket, ch_core, default, farming, pipeworks, technic_worldgen
 optional_depends = screwdriver, mesecons, mesecons_mvps, digilines, digiline_remote, intllib, unified_inventory, vector_extras, dye, craftguide,i3, wielded_light
