[ch_extras] přidány pokrývky

--- a/mods/ch_modpack/ch_extras/mod.conf
+++ b/mods/ch_modpack/ch_extras/mod.conf
@@ -1,4 +1,4 @@
 name = ch_extras
 description = Další bloky, nástroje apod. pro Český hvozd
 depends = ch_core, default, doors, moreblocks, player_api, unifieddyes
-optional_depends = anvil, mobs, moreores, homedecor_gastronomy, mesecons_switch, technic, what_is_this_uwu
+optional_depends = anvil, mobs, moreores, homedecor_gastronomy, mesecons_switch, summer, technic, what_is_this_uwu
