--- a/mods/ingots/mod.conf
+++ b/mods/ingots/mod.conf
@@ -1,3 +1,3 @@
 name = ingots
 description = makes ingots placable in the world
-optional_depends = default, moreores, technic, rainbow_ore, mcl_core, mcl_copper, mcl_nether
+optional_depends = default, dye, basic_materials, moreores, technic
