[screwdriver,rotate] podpora otáčení nových typů bloků
- [ch_core/joinplayer] změna minimální verze klienta pro připojení
- [ch_test] přidány testovací bloky pro testy otáčení a barvení

--- a/mods/minetest-mod-rotate/mod.conf
+++ b/mods/minetest-mod-rotate/mod.conf
@@ -1,4 +1,4 @@
 name = rotate
 description = Screwdriver replacement/improvement
-depends = screwdriver
+depends = ch_core, screwdriver
 optional_depends = default
