[drawers] odebrán osikový a dubový zásobník
- [drawers] dřevěný zásobník se nově vyrábí jen z obyčejného jabloňového dřeva
- [drawers] bukový zásobník přejmenován na březový (původní označení bylo chybné)
- [itemshelf] zrušeny osikové regály, přidány kaučukovníkové
- [unified_inventory] vyhazované předměty s obsáhlými metadaty se nově do logu zapíšou jen zkráceně
- [moreblocks,unified_inventory] nově se protokolují i předměty vyhazované přes hlavní slot či kotoučovou pilu
- [ch_test] již se nesledují akce v inventářích hráčů/ek

--- a/mods/itemshelf/mod.conf
+++ b/mods/itemshelf/mod.conf
@@ -1,5 +1,6 @@
 autor = zorman2000
 name = itemshelf
 depends = default, moreblocks
+optional_depends = moretrees
 description = The item shelf mod is a simple mod that adds to shelves that can hold up to 4 or 6 items.
 title = Item Shelves
