[...] sjednoceno vyhazování odpadků
- Kouzelnické postavy již nesmějí brát či ukládat odpadky v odpadkových koších.

--- a/mods/trash_can/mod.conf
+++ b/mods/trash_can/mod.conf
@@ -1,4 +1,4 @@
 name = trash_can
 description = This mod adds a wooden trash can, and a dumpster to the game. Right click it, put in your trash, and click the empty trash button.
-depends = default
+depends = ch_core, default
 optional_depends = homedecor_trash_cans
