--- a/mods/homedecor_modpack/homedecor_trash_cans/mod.conf
+++ b/mods/homedecor_modpack/homedecor_trash_cans/mod.conf
@@ -1,4 +1,4 @@
 name = homedecor_trash_cans
 description = Homedecor mod: trash cans
-depends = homedecor_common
+depends = ch_core, homedecor_common
 optional_depends = default, basic_materials, dye
