[aloz] nový mód
- [books] různá vylepšení knih (+ nedodělaný knihovní stroj)

--- a/mods/compactor/mod.conf
+++ b/mods/compactor/mod.conf
@@ -2,5 +2,5 @@ name=compactor
 title=Compactor
 description=A Technic based machine for converting certain items into more compact forms
 depends=default,technic
-optional_depends=charcoal,farming,moreblocks,moreores
+optional_depends=aloz,charcoal,farming,moreblocks,moreores
 author=alerikaisattera
