--- a/mods/ingots/mod.conf
+++ b/mods/ingots/mod.conf
@@ -1,3 +1,3 @@
 name = ingots
 description = makes ingots placable in the world
-optional_depends = default, dye, basic_materials, moreores, technic
+optional_depends = aloz, default, dye, basic_materials, moreores, technic
