--- a/mods/bulletin_boards/mod.conf
+++ b/mods/bulletin_boards/mod.conf
@@ -1,4 +1,4 @@
 name=bulletin_boards
 description = Allows creation of global bulletin boards where players can post public messages
-depends = ch_core
+depends = ch_core, unifieddyes
 optional_depends = default
