[ingots] Ingoty přepracovány na color4dir umožňující otáčení.

--- a/mods/ingots/mod.conf
+++ b/mods/ingots/mod.conf
@@ -1,3 +1,4 @@
 name = ingots
 description = makes ingots placable in the world
-optional_depends = aloz, default, dye, basic_materials, moreores, technic
+depends = default
+optional_depends = aloz, dye, basic_materials, moreores, technic
