[ch_bank] nový mód
- [builtin_item] opraveno volání callbacků register_on_pickup_item
- [ch_core, ch_bank] přidáno .luacheckrc a luacheck.sh
- [ch_core/ap] přestat zobrazovat úrovně novým postavám
- [ch_core/ap] akce craft nově zahrnuje také operace s vlastním inventářem, jezení a zvedání předmětů
- [ch_core/chat] příkazy /info a /info_o nově zobrazuje i typ postavy
- [ch_core/formspecs] zrušena podpora kešování, přidána funkce ch_core.close_formspec()
- [ch_core/registrace] přepsán kód dávající úvodní předměty novým postavám
- [ch_overrides/extra_recipes] žlutou barvu lze nyní vyrobit i z železné rudy a vody
- [unified_inventory] integrace módu ch_bank, potlačení lite-módu

--- a/mods/ch_modpack/ch_overrides/mod.conf
+++ b/mods/ch_modpack/ch_overrides/mod.conf
@@ -1,4 +1,4 @@
 name = ch_overrides
 description = Vlastní úpravy serveru Český hvozd zlepšující vztahy mezi módy
 depends = ch_core, default, moreblocks, vessels
-optional_depends = areas, bakedclay, bamboo, basic_materials, bones, bucket, building_blocks, butterfiles, carts, cavestuff, ch_extras, charcoal, cottages, darkage, doors, drinks, ebony, emote, farming, fireflies, flowers, homedecor_kitchen, homedecor_seating, letters, map, molehills, morelights_vintage, moreores, orienteering, pipeworks, redef, screwdriver, summer, technic, technic_chests, technic_cnc, technic_worldgen, tnt, travelnet, ts_furniture, walls, wrench, xpanes
+optional_depends = areas, bakedclay, bamboo, basic_materials, bones, bucket, building_blocks, butterfiles, carts, cavestuff, ch_bank, ch_extras, charcoal, cottages, currency, darkage, doors, drinks, ebony, emote, farming, fireflies, flowers, homedecor_kitchen, homedecor_seating, letters, map, molehills, morelights_vintage, moreores, orienteering, pipeworks, redef, screwdriver, summer, technic, technic_chests, technic_cnc, technic_worldgen, tnt, travelnet, ts_furniture, walls, wrench, xpanes
