--- a/mods/ch_modpack/ch_extras/mod.conf
+++ b/mods/ch_modpack/ch_extras/mod.conf
@@ -1,4 +1,4 @@
 name = ch_extras
 description = Další bloky, nástroje apod. pro Český hvozd
-depends = ch_core, default, doors, moreblocks, player_api, unifieddyes, unified_inventory
+depends = ch_core, default, doors, moreblocks, player_api, screwdriver, unifieddyes, unified_inventory
 optional_depends = anvil, mobs, moreores, homedecor_gastronomy, home_workshop_machines, mesecons_switch, streets, summer, technic, what_is_this_uwu
