--- a/mods/travelnet/mod.conf
+++ b/mods/travelnet/mod.conf
@@ -1,4 +1,4 @@
 name = travelnet
-depends = ch_core
+depends = ch_core, ch_bank
 optional_depends = mesecons, dye, mesecons_mvps
 description = Network of teleporter-boxes that allows easy travelling to other boxes on the same network.
