--- a/mods/mail/mod.conf
+++ b/mods/mail/mod.conf
@@ -1,3 +1,4 @@
 name = mail
 description = ingame mail-system
-optional_depends = canonical_name,default,mtt,unified_inventory,sfinv_buttons
+depends = ch_core
+optional_depends = default,mtt,unified_inventory,sfinv_buttons
