--- a/mods/ch_modpack/ch_test/mod.conf
+++ b/mods/ch_modpack/ch_test/mod.conf
@@ -1,3 +1,3 @@
 name = ch_test
 depends = ch_core, default, unified_inventory
-optional_depends = moreblocks, unifieddyes
+optional_depends = moreblocks, unifieddyes, charcoal
