--- a/mods/unified_inventory/mod.conf
+++ b/mods/unified_inventory/mod.conf
@@ -1,6 +1,6 @@
 name = unified_inventory
 depends = ch_core
-optional_depends = default, ch_bank, creative, sfinv, datastorage, farming
+optional_depends = default, creative, sfinv, datastorage, farming
 description = """
 Unified Inventory replaces the default survival and creative inventory.
 It adds a nicer interface and a number of features, such as a crafting guide.
