[smartshop] integrace bezhotovostních plateb
- [ch_bank,unified_inventory] díl formspecu se zůstatkem přesunut do módu ch_bank
- [ch_bank] lepší ikona časovače při nabízení obchodování
- [ch_core/penize] lépe viditelná barva pro záporné částky
- [ch_core/penize] nové metody ch_core.pay_to() a pay_from() a registrovatelné platební metody
- [smartshop] nový mechanismus rozměňování

--- a/mods/ch_modpack/ch_bank/mod.conf
+++ b/mods/ch_modpack/ch_bank/mod.conf
@@ -1,4 +1,4 @@
 name = ch_bank
 description = Bezhotovostní platby a výměnný obchod
 depends = ch_core, default, unified_inventory
-optional_depends = emote
+optional_depends = currency, emote
