--- a/mods/auroras/mod.conf
+++ b/mods/auroras/mod.conf
@@ -1,3 +1,3 @@
 name = auroras
 description = Adds auroras (northern/southern lights) at night in cold places.
-optional_depends = climate_api
+optional_depends = climate_api, ch_sky
