[ch_sky] úprava jasu a kontrastu oblohy
- [mobs_animal] oprava závislosti

--- a/mods/mobs_animal/mod.conf
+++ b/mods/mobs_animal/mod.conf
@@ -1,4 +1,4 @@
 name = mobs_animal
 depends = bucket, mobs
-optional_depends = default, lucky_block, intllib, moreblocks
+optional_depends = default, lucky_block, intllib, moreblocks, bucket_wooden
 description = Adds farm animals.
