[technic_cnc] vylepšeno rozhraní soustruhu (nyní ukazuje bloky, které lze skutečně vyrobit)
- [technic_cnc] z materiálů soustruhu odebrán blok cínu a blok nerezu
- [technic_cnc] oprava závislostí na ostatních módech

--- a/mods/technic/technic_cnc/mod.conf
+++ b/mods/technic/technic_cnc/mod.conf
@@ -1,3 +1,3 @@
 name = technic_cnc
 depends = default, basic_materials
-optional_depends = ch_core, darkage, farming, technic
+optional_depends = building_blocks, ch_core, concrete, cottages, darkage, ethereal, farming, moreblocks, technic, technic_worldgen
