[ch_decor] přidány ozdobné lampy z módu stoneblocks
- [ch_extras] Přidána barvitelná mozaika na dlažbu a její kombinace s některými druhy omítky

--- a/mods/ch_modpack/ch_decor/mod.conf
+++ b/mods/ch_modpack/ch_decor/mod.conf
@@ -1,4 +1,4 @@
 name = ch_decor
 description = Non-GPL decorative blocks from various source mods
 depends = default, doors
-optional_depends = moreblocks, unifieddyes
+optional_depends = mesecons, moreblocks, unifieddyes
