[ch_extras,smartshop] implementováno vracení šatů
- [ch_core/lib] do struktury času přidána i časová známka
- [smartshop] přidáno pole se vzorky mincí
- [smartshop] lepší tvar obchodního terminálu

--- a/mods/ch_modpack/ch_extras/mod.conf
+++ b/mods/ch_modpack/ch_extras/mod.conf
@@ -1,4 +1,4 @@
 name = ch_extras
 description = Další bloky, nástroje apod. pro Český hvozd
 depends = ch_core, default, doors, moreblocks, player_api, screwdriver, unifieddyes, unified_inventory
-optional_depends = anvil, charcoal, ch_npc, mobs, moreores, homedecor_gastronomy, home_workshop_machines, mesecons_switch, solidcolor, streets, summer, technic, what_is_this_uwu
+optional_depends = anvil, bakedclay, charcoal, ch_npc, mobs, moreores, homedecor_gastronomy, home_workshop_machines, mesecons_switch, solidcolor, streets, summer, technic, what_is_this_uwu
