[ch_core/creative_inventory,unified_inventory] lepší přepínání mezi kategoriemi
- [ch_beauty] implementována funkce kadeřnického nástavce
- [ch_core] čas bude plynout v noci dvakrát rychleji než přes den
- [clothing] přidána funkce pro přidání oblečení
- [not_wuzzy_dice] kostku lze hodit i levým klikem bez umístění

--- a/mods/ch_modpack/ch_beauty/mod.conf
+++ b/mods/ch_modpack/ch_beauty/mod.conf
@@ -1,4 +1,4 @@
 name = ch_beauty
 description = Oděvní doplňky pro server Český hvozd
-depends = ch_core, skinsdb, clothing, player_api
+depends = ch_core, clothing, default, player_api, skinsdb, unifieddyes
 optional_depends = farming
