[moreblocks,technic_cnc] střešní tvary převedeny ze soustruhu na kotoučovou pilu
- [ch_core/joinplayer] po přihlášení se nově zobrazí přehled pěti registrovaných klientů, kteří se naposledy přihlásili
- [ch_core/joinplayer] právo creative se nově resetuje už při odpojení ze hry
- [ch_core/shapes_db] systém přepracován, nově se uplatňuje i na tvary z CNC
- [ch_overrides,moreblocks] recepty tvarů stairsplus převedeny do ch_overrides a zjednodušeny
- [moreblocks] doplněny střešní tvary se sklonem 22°
- [technic_cnc] řízení tvarů převedeno pod systém ch_core/shapes_db

--- a/mods/moreblocks/mod.conf
+++ b/mods/moreblocks/mod.conf
@@ -1,4 +1,4 @@
 name = moreblocks
 description = Adds various miscellaneous blocks to the game.
-optional_depends = default,stairs,farming,wool,basic_materials,unified_inventory,ch_core,ch_overrides_mg
-min_minetest_version = 5.0.0
+depends = ch_core,ch_overrides_mg,moreblocks_extra_models
+optional_depends = default,stairs,farming,wool,basic_materials,unified_inventory
