[ch_core/interiors] přidána detekce interiéru
- [ch_core,builtin_item,ch_npc,handdryer,pipeworks] optimalizace funkcí vyhledávajících entity
- [ch_overrides/ts_furniture] umožněno sedání na některé typy schodů; znemožněno sedání na chybně otočené bloky
- [ch_test] přidáno zaznamenávání času spotřebovaného funkcí get_objects_inside_radius()
- [ch_test] přidán modul verify_tiles

--- a/mods/builtin_item/mod.conf
+++ b/mods/builtin_item/mod.conf
@@ -1,4 +1,4 @@
 name = builtin_item
-depends = default
+depends = ch_core, default
 optional_depends =
 description = Dropped items can now be pushed by water and have their own custom functions.
