--- a/mods/charcoal/mod.conf
+++ b/mods/charcoal/mod.conf
@@ -1,5 +1,5 @@
 author = X17
 description = Make charcoal from trees and use this as fuel
-depends = default
+depends = default, moreblocks
 name = charcoal
 title = Charcoal
