--- a/mods/minetest_tieless_tracks/mod.conf
+++ b/mods/minetest_tieless_tracks/mod.conf
@@ -2,3 +2,4 @@ name=tieless_tracks
 title=Tieless Tracks
 description=Tracks without crossties for use on streets and other related things
 depends=default, advtrains, advtrains_train_track
+optional_depends=advtrains_line_automation
