--- a/mods/bonemeal/mod.conf
+++ b/mods/bonemeal/mod.conf
@@ -1,4 +1,4 @@
 name = bonemeal
 depends = default
-optional_depends = intllib, lucky_block, farming, ethereal, moretrees, technic_worldgen, flowers, dye, ferns, dryplants
+optional_depends = intllib, lucky_block, farming, ethereal, moretrees, technic_worldgen, flowers, dye, ferns, dryplants, bushes
 description = Adds bone and bonemeal giving the ability to quickly grow plants and saplings.
