[ch_core/nodedir,rotate] nový podmód umožňující otáčení nevyužívající param2
- [bonemeal,ch_overrides,farming] přidána žlutá rajčata
- [ch_core/ch_wm_nodes] podmód odebrán
- [ch_extras/colorable_glass] reimplementováno s využitím nodedir namísto ch_wm_nodes
- [ch_extras/skakadlo] skákadlo nově nezaměřuje bloky
- [rotate] opraveno chování rotačních klíčů v situaci
- [rotate] přidána podpora otáčení bloků s paramtype2 == "colordegrotate"

--- a/mods/ch_modpack/ch_core/mod.conf
+++ b/mods/ch_modpack/ch_core/mod.conf
@@ -1,4 +1,4 @@
 name = ch_core
 description = Vlastní úpravy serveru Český hvozd
-depends = basic_materials, default, doors, dye, player_api, sethome, wool
+depends = basic_materials, default, doors, dye, player_api, screwdriver, sethome, wool
 optional_depends = builtin_overrides, emote, hudbars, wielded_light
