--- a/mods/ch_modpack/ch_test/mod.conf
+++ b/mods/ch_modpack/ch_test/mod.conf
@@ -1,3 +1,3 @@
 name = ch_test
 depends = ch_core, default, unified_inventory, unifieddyes
-optional_depends = moreblocks, charcoal, pipeworks
+optional_depends = moreblocks, charcoal, pipeworks, display_api, signs_api, font_api
