--- a/mods/streets/mod.conf
+++ b/mods/streets/mod.conf
@@ -1,7 +1,7 @@
 name = streets
 title = Streets
 depends = building_blocks, ch_core, default, stairs, dye
-optional_depends = creative, xpanes, stairsplus, moreblocks, digilines, concrete
+optional_depends = creative, xpanes, stairsplus, moreblocks, digilines, concrete, ch_extras
 license = MIT
 version = 2.0.1
 author = webdesigner97
