--- a/mods/ch_modpack/ch_extras/mod.conf
+++ b/mods/ch_modpack/ch_extras/mod.conf
@@ -1,4 +1,4 @@
 name = ch_extras
 description = Další bloky, nástroje apod. pro Český hvozd
 depends = ch_core, default, doors, moreblocks, player_api, screwdriver, unifieddyes, unified_inventory
-optional_depends = animalworld, anvil, bakedclay, charcoal, ch_npc, mobs, moreores, homedecor_gastronomy, home_workshop_machines, mesecons_switch, not_wuzzy_dice, solidcolor, summer, technic, what_is_this_uwu, wrench
+optional_depends = animalworld, anvil, bakedclay, charcoal, ch_npc, mobs, moreores, homedecor_gastronomy, home_workshop_machines, mesecons_switch, not_wuzzy_dice, solidcolor, summer, technic, technic_cnc, what_is_this_uwu, wrench
