[birds] přidán nový mód

--- a/část-minetest.conf
+++ b/část-minetest.conf
@@ -95,6 +95,11 @@ enable_weather = false
 # mód advtrains
 advtrains_show_ids = true
 
+# mód birds
+birds.minBirds = 8
+birds.spawnAltitude = 40
+birds.maxSwarmSize = 1
+
 # mód cottages
 cottages_feldweg_mode = mesh
 
