--- a/mods/mobs_redo/mod.conf
+++ b/mods/mobs_redo/mod.conf
@@ -1,4 +1,4 @@
 name = mobs
-depends = ch_core
-optional_depends = default, tnt, dye, farming, invisibility, intllib, lucky_block, cmi, toolranks, pathfinder, player_api
 description = Adds a mob api for mods to add animals or monsters etc.
+optional_depends = default, tnt, invisibility, lucky_block, cmi, toolranks, pathfinder, player_api, mtobjid, visual_harm_1ndicators, mcl_sounds, mesecons
+min_minetest_version = 5.0
