--- a/mods/mobs_redo/mod.conf
+++ b/mods/mobs_redo/mod.conf
@@ -1,4 +1,5 @@
 name = mobs
 description = Adds a mob api for mods to add animals or monsters etc.
+depends = ch_core
 optional_depends = default, tnt, invisibility, lucky_block, cmi, toolranks, pathfinder, player_api, mtobjid, visual_harm_1ndicators, mcl_sounds, mesecons
-min_minetest_version = 5.0
+min_minetest_version = 5.8
