--- a/mods/airtanks/mod.conf
+++ b/mods/airtanks/mod.conf
@@ -1,4 +1,4 @@
 name = airtanks
 description = Provides pressurized air tanks for extended underwater excursions
-depends = default
+depends = ch_core, default
 optional_depends = doc
