[ch_core/entity_register] doimplementován dynamický registr entit a použit v řadě módů
- [advtrains] dočasně vypnuto poškozování jiných (nehráčských) objektů vlaky
- [default,ch_overrides_mg/builtin_item] potlačeno vestavěné slučování předmětů na zemi a nahrazeno vlastním
- [ch_overrides_mg] mód rozdělen na moduly
- [display_api,itemframes,signs_lib]

--- a/část-minetest.conf
+++ b/část-minetest.conf
@@ -112,6 +112,7 @@ mobs_spawn_protected = true
 mobs_spawn_monster_protected = false
 mob_show_health = true
 enable_peaceful_player = true
+mobs_can_hear = false
 
 # mód redef
 redef_3d_ladders = false
