[ch_core] přidáno dláto
- [ch_chest] vývoj
- [pillars] odebrána reakce na pravý klik (kvůli dlátu)

--- a/mods/ch_devel/ch_chest/mod.conf
+++ b/mods/ch_devel/ch_chest/mod.conf
@@ -1,4 +1,4 @@
 name = ch_chest
 description = Chest for Český hvozd
-depends = ch_core, default, unified_inventory
-optional_depends = moreores, pipeworks, unifieddyes
+depends = ch_core, default, unifieddyes, unified_inventory
+optional_depends = moreores, pipeworks
