[ch_core/shapes_db,pillars] přidány pilíře z černého páleného jílu a z barevných kovových bloků
- [streets] opraveno: značkovače nově umí přepsat buildable_to bloky

--- a/mods/pillars/mod.conf
+++ b/mods/pillars/mod.conf
@@ -2,5 +2,5 @@ name = pillars
 author = Citorva
 description = Add a lot of pillars for fun.
 depends = ch_core, default
-optional_depends = basic_materials, ch_extras, darkage, ebony, jonez, moreblocks, moretrees, solidcolor, technic_worldgen
+optional_depends = bakedclay, basic_materials, bridger, ch_extras, darkage, ebony, jonez, moreblocks, moretrees, solidcolor, technic_worldgen
 title = Pillars
