--- a/mods/si_frames/mod.conf
+++ b/mods/si_frames/mod.conf
@@ -1,5 +1,4 @@
 name = si_frames
 title = Superimposed Window Frames
 description = Add a wooden frame over windows
-optional_depends = default, maple, ethereal, mcl_core
-supported_games = minetest, mineclone2
+depends = default, ch_core
