--- a/mods/comboblock/mod.conf
+++ b/mods/comboblock/mod.conf
@@ -1,4 +1,4 @@
 name = comboblock
 description = Allows the stacking of slabs vertically
-depends = stairs
+depends = ch_core, stairs
 optional_depends = bakedclay, ch_decor, darkage, farming, cracked_castle, moreblocks, jonez, solidcolor
