[pkarcs_doors*] přidána podpora pro dláto

--- a/mods/pkarcs/pkarcs_doors/mod.conf
+++ b/mods/pkarcs/pkarcs_doors/mod.conf
@@ -1,4 +1,4 @@
 name = pkarcs_doors
 description = Adds arched doors for the Simple_Arcs [pkarcs] mod for minetest game.
-depends = default, doors, screwdriver, xpanes
+depends = ch_core, default, doors, screwdriver, xpanes
 optional_depends = mesecons
