--- a/mods/pkarcs/pkarcs_doors3/mod.conf
+++ b/mods/pkarcs/pkarcs_doors3/mod.conf
@@ -1,3 +1,3 @@
 name = pkarcs_doors3
-depends = default, doors, screwdriver, xpanes
+depends = ch_core, default, doors, screwdriver, xpanes
 optional_depends = mesecons
