--- a/mods/technic/concrete/mod.conf
+++ b/mods/technic/concrete/mod.conf
@@ -1,3 +1,3 @@
 name = concrete
-depends = default
-optional_depends = basic_materials, intllib, moreblocks
+depends = basic_materials, default
+optional_depends = intllib, moreblocks
