--- a/mods/comboblock/mod.conf
+++ b/mods/comboblock/mod.conf
@@ -1,4 +1,4 @@
 name = comboblock
 description = Allows the stacking of slabs vertically
-depends = ch_core, stairs
-optional_depends = bakedclay, ch_decor, darkage, farming, cracked_castle, moreblocks, jonez, solidcolor
+depends = ch_core, moreblocks, stairs
+optional_depends = bakedclay, ch_decor, darkage, farming, cracked_castle, jonez, solidcolor
