--- a/mods/homedecor_modpack/homedecor_misc/mod.conf
+++ b/mods/homedecor_modpack/homedecor_misc/mod.conf
@@ -1,4 +1,4 @@
 name = homedecor_misc
 description = Homedecor mod: miscellaneous
-depends = homedecor_common
-optional_depends = building_blocks, technic, bucket, signs_lib, screwdriver, default, basic_materials, unifieddyes
+depends = ch_core, homedecor_common, unifieddyes
+optional_depends = building_blocks, technic, bucket, signs_lib, screwdriver, default, basic_materials
