[techpack_stairway] lepší textura pro pletivo
- [ch_core/shapes_db] vráceny omylem odebrané střešní tvary skla
- [signs_road] neviditelné cedule rozšířeny z 2 metrů na 3

--- a/mods/techpack_stairway/mod.conf
+++ b/mods/techpack_stairway/mod.conf
@@ -2,3 +2,4 @@ name=techpack_stairway
 title=Techpack stairway
 description=Simple stairways and bridges for your machines.
 depends=ch_core, default, unifieddyes
+optional_depends=building_blocks
