[classic_coaches] počeštění vzhledů CC na ČH
- [advtrains_train_subway] vůz metra a zelený vůz metra skryty
- [ch_unkrep] vývoj

--- a/mods/ch_modpack/ch_unkrep/mod.conf
+++ b/mods/ch_modpack/ch_unkrep/mod.conf
@@ -1,4 +1,3 @@
 name = ch_unkrep
 description = Repairer for unknown items
-depends = ch_core
-optional_depends = moreblocks
+depends = ch_core, ch_overrides
