[ch_extras/colorable_pole,moreblocks] přidány tenké tyče
- [advtrains_line_automation] přidána evidence posledních 10 jízd od každé linevar
- [ch_core/shape_selector] do rozhraní přidána položka input_only
- [ch_extras/colorable_grate] přidáno spojující se a vystředěné pletivo
- [ch_overrides/chisel_regs] přidána podpora dláta pro: osvětlení z Home Decoru, pochodeň a okenní sklo z cottages
- [ch_overrides/drawtype_groups] neviditelné cedule a neviditelné fotografie se nově spojují s tyčemi pro umožnění zvláštních efektů
- [signs_road] neviditelné cedule mají nově menší výběrový box
- [morelights_dim] přidána podpora dláta pro: osvětlení z morelights
- [windmill] přidána podpora dláta pro kola větrných mlýnů

--- a/mods/doxy_morelights_dim/morelights_dim/mod.conf
+++ b/mods/doxy_morelights_dim/morelights_dim/mod.conf
@@ -4,4 +4,4 @@
 
 name = morelights_dim
 description = API for turning light nodes off or to dim them.
-depends = ch_base
+depends = ch_base, ch_core
