[font_api,signs_api,signs_road] přepracován ovládací panel cedulí signs_api, nově je možno nastavit barvu, zarovnání apod.
- [ch_overrides/drawtype_groups] bloky jeřábu již nemají skupinu full_cube_node (kvůli tyčím)
- [sings_road,ch_unkrep] neviditelné cedule upraveny: normální varianta
  má stejnou velikost písma jako obyčejné cedule, přidána varianta
  s plnou výškou bloku; obě varianty mají podvarianty na tyč
- [streets] přidána podpora dláta pro veřejné osvětlení

--- a/mods/ch_modpack/ch_unkrep/mod.conf
+++ b/mods/ch_modpack/ch_unkrep/mod.conf
@@ -1,3 +1,4 @@
 name = ch_unkrep
 description = Repairer for unknown items
 depends = ch_core, ch_overrides
+optional_depends = display_api, signs_api
