[ch_containers] další vývoj
- [advtrains_construction_train] respektovat vlastnosti diggable a použít kombinovaný blok namísto prostého štěrku
- [birds] ptáci se nebudou objevovat v kontejnerech
- [ch_core/lib] přidány funkce ch_core.goa[1234]()
- [ch_core/shapes_db] odebrány trojúhelníky z vlny, přidány diagonální výplně z asfaltu
- [ch_overrides/ui_stavby] zákaz evidence staveb v kontejnerech
- [towercrane] oprava pádu serveru při vytěžení základny jeřábu bez hráčské postavy

--- a/mods/advtrains_construction_train/mod.conf
+++ b/mods/advtrains_construction_train/mod.conf
@@ -1,3 +1,4 @@
 name=advtrains_construction_train
 description=Construction train for advtrains
 depends=advtrains, ch_core
+optional_depends=comboblock
