[font_api,signs_api] přidána podpora otáčení a překlápění textury s textem na cedulích, přidána předvolba na zlatý text
- [advtrains_line_automation] zakomentován výpis začátku/konce linky do logu
- [advtrains_construction_train] oprava chyby, která způsobila záměnu normálního a železničního štěrku u podbíječky
- [ch_formspec] vývoj
- [ch_prices] vývoj
- [ch_core/ap] vylepšení rozpoznání automatizované činnosti
- [ch_core/data] nový příkaz /dumpplayer pro analýzu nestandardních stavů postavy
- [metrosigns,tombs] integrace směrovek z metrosigns a náhrobků do systému cedulí
- [moreblocks] nízké zdi se nově spojují „tyčemi“ do výšky
- [signs_road] opravena chyba způsobující chybnou funkčnost neviditelné cedule s plnou výškou

--- a/mods/metrosigns/mod.conf
+++ b/mods/metrosigns/mod.conf
@@ -1,4 +1,4 @@
 name = metrosigns
 descriptions = Extensive library of signs for train/metro systems
-depends = ch_core, letters, unifieddyes
-optional_depends = advtrains_subwayblocks, anvil, basic_materials, default, signs_api, trainblocks
+depends = ch_core, letters, signs_api, unifieddyes
+optional_depends = advtrains_subwayblocks, anvil, basic_materials, default, trainblocks
