--- a/mods/tombs/mod.conf
+++ b/mods/tombs/mod.conf
@@ -1,5 +1,5 @@
 name = tombs
 description = Adds many shapes and styles of tombstones.
-depends = ch_core, default, display_api, font_api
+depends = ch_core, default, display_api, font_api, signs_api
 optional_depends = bakedclay,basic_materials,bones,ch_extras,darkage,jonez,moreblocks,technic_worldgen
 author = Nathan Salapat
