[ch_core,*] Funkce ch_core související s reálným a herním časem odděleny do samostatného módu ch_time.

--- a/mods/bulletin_boards/mod.conf
+++ b/mods/bulletin_boards/mod.conf
@@ -1,4 +1,4 @@
 name=bulletin_boards
 description = Allows creation of global bulletin boards where players can post public messages
-depends = ch_core, unifieddyes
+depends = ch_core, ch_time, unifieddyes
 optional_depends = default
