--- a/mods/ch_modpack/ch_bank/mod.conf
+++ b/mods/ch_modpack/ch_bank/mod.conf
@@ -1,4 +1,4 @@
 name = ch_bank
 description = Bezhotovostní platby a výměnný obchod
-depends = ch_core, default, unified_inventory
+depends = ch_core, ch_time, default, unified_inventory
 optional_depends = currency, emote
