--- a/mods/minetest-mod-ambience/mod.conf
+++ b/mods/minetest-mod-ambience/mod.conf
@@ -1,4 +1,4 @@
 name = ambience
-depends = ch_core, default
+depends = ch_core, ch_time, default
 optional_depends = fire, playerplus, env_sounds
 description = Adds realistic sound effects into your world.
