--- a/mods/minetest-smartshop/mod.conf
+++ b/mods/minetest-smartshop/mod.conf
@@ -1,4 +1,4 @@
 name = smartshop
 description = A smarter and easier shop
-depends = ch_core
+depends = ch_core, ch_time
 optional_depends = ch_bank, default, mesecons, mesecons_mvps, petz, pipeworks, tubelib
