--- a/mods/books/mod.conf
+++ b/mods/books/mod.conf
@@ -1,3 +1,3 @@
 name = books
-depends = ch_core, default, unifieddyes
+depends = ch_core, ch_time, default, unifieddyes
 min_minetest_version = 5.0.0
