--- a/mods/cheese/mod.conf
+++ b/mods/cheese/mod.conf
@@ -1,5 +1,5 @@
 name = cheese
-depends = ch_core, default, bucket, vessels
+depends = ch_core, ch_time, default, bucket, vessels
 optional_depends = unified_inventory, i3, mobs, mobs_animal, petz, animalia, farming, ethereal, moretrees, cucina_vegana, astral, mana, flower_cow,  playereffects, playerphysics, awards, wooden_bucket, hopper, pie, bonemeal, hunger_ng
 author = Annalysa
 version = 1.3
