--- a/mods/display_modpack/signs_api/mod.conf
+++ b/mods/display_modpack/signs_api/mod.conf
@@ -1,4 +1,4 @@
 name=signs_api
 description=A library providing various helper functions for registereing signs with text display
-depends=ch_core,default,display_api,font_api
+depends=ch_core,ch_time,default,display_api,font_api
 optional_depends=intllib, technic
