--- a/mods/generic_flags/mod.conf
+++ b/mods/generic_flags/mod.conf
@@ -1,5 +1,5 @@
 name = generic_flags
 title = Generic Flags
 author = AwesomeDragon97
-depends = ch_core, default
+depends = ch_core,ch_time, default
 description = Adds a variety of generic animated flags. Original mod is by Wuzzy. Feel free to extend this mod with your own flags. All of my modifications to the original mod are also LGPL-3.
