--- a/mods/mail/mod.conf
+++ b/mods/mail/mod.conf
@@ -1,4 +1,4 @@
 name = mail
 description = ingame mail-system
-depends = ch_core
+depends = ch_core,ch_time
 optional_depends = default,mtt,unified_inventory,sfinv_buttons
