[ch_extras/colorable_walls] přidána lakovaná zeď a lakovaná nízká zeď (spojující se/přímé)
- [advtrains_line_automation] přehled posledních jízd je nyní přístupný všem postavám s právem railway_operator, rovněž příkaz /linky toto právo nově vyžaduje
- [ch_core/shapes_db] přidány okenní rámy z páleného jílu
- [ch_extras/periskop] s periskopem v ruce již nově nejde zaměřovat většinu bloků
- [comboblock] pokus o opravu nekorespondujících textur betonu mezi kombinovanými a normálními bloky
- [orienteering] drobná oprava

--- a/mods/si_frames/mod.conf
+++ b/mods/si_frames/mod.conf
@@ -1,4 +1,4 @@
 name = si_frames
 title = Superimposed Window Frames
 description = Add a wooden frame over windows
-depends = default, ch_core
+depends = bakedclay, default, ch_core
