[pipeworks] optimalizace globalstepu a /log_pipworks_entities
- [ch_core/entity_register] lepší ošetření volání get_handle_of_entity() na entitu s neplatným objektem

--- a/část-minetest.conf
+++ b/část-minetest.conf
@@ -114,6 +114,9 @@ mob_show_health = true
 enable_peaceful_player = true
 mobs_can_hear = false
 
+# mód pipeworks
+pipeworks_entity_update_interval = 0.8
+
 # mód redef
 redef_3d_ladders = false
 redef_show_steps = false
